# super-shape-battle

./: Cargo.toml  todo.md
src/: components.rs  entity.rs  game.rs  geometry.rs  iter.rs  main.rs  shape.rs  ship.rs  systems.rs  vec.rs  world.rs
src/components/: bullet.rs  collidable.rs  collision.rs  damage.rs  damaged.rs  drawable.rs  expirable.rs  physicsable.rs  player_controllable.rs  positionable.rs  rotatable.rs  shape.rs  ship.rs  tag.rs  transform.rs  vulnerable.rs
src/systems/: collision.rs  damage.rs  draw.rs  expiration.rs  physics.rs  player_input.rs  shape_manager.rs  ship_manager.rs
