[package]
name = "super-shape-battle"
version = "0.1.0"
authors = ["Hunter Haydel <haydh530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
geo = "0.14.0"
uuid = { version = "0.8.1", features = ["v4"] }
